--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hostelfinder.app">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
+    <permission
+        android:name="com.hostelfinder.app.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +22,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HostelFinder">
-        <activity android:name=".HostelDashboardActivity"></activity>
+        <activity android:name=".ReviewActivity"></activity>
+        <activity android:name=".AppointmentActivity" />
+        <activity android:name=".ManageRoomActivity" />
+        <activity android:name=".HostelInformationActivity" />
+        <activity android:name=".ConversationActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".HostelDashboardActivity" />
         <activity android:name=".RegisterHostelActivity" />
         <activity android:name=".HostelDetails" />
 
@@ -30,6 +49,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
